# taffybar-config

./: .gitmodules  my-taffybar.cabal  stack.yaml  taffybar.hs
