name:                my-taffybar
version:             0.1.0.0
author:              Jirka Marsik
maintainer:          jiri.marsik89@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , dbus >= 0.10.13 && < 0.11
                     , filepath
                     , gtk
                     , gtk-traymanager >= 0.1.6 && < 0.2
                     , libxml-sax >= 0.7.5 && < 0.8
                     , process
                     , taffybar
                     , xmonad-contrib >= 0.13 && < 0.14
                     , X11 >= 1.8 && < 1.9
                     , X11-xft >= 0.3.1 && < 0.4
  default-language:    Haskell2010
